# RecombinantDetector

./: README.md
RecombinantDetector/: CMakeLists.txt
RecombinantDetector/app/: App.cpp  App.h  FastaReader.cpp  FastaReader.h  PTable.cpp  PTable.h  PTableFile.cpp  PTableFile.h  PhyloLocator.cpp  TextFile.cpp  TextFile.h  UserSettings.cpp  UserSettings.h
RecombinantDetector/app/modes/: PTableGenerator.cpp  PTableGenerator.h  RecombinantDetector.cpp  RecombinantDetector.h  Run.cpp  Run.h
RecombinantDetector/core/: Alignment.cpp  Alignment.h  AlignmentDescriptor.cpp  AlignmentDescriptor.h  AllelicMask.h  BreakPoint.h  Nucleotide.h  PhyloNode.cpp  PhyloNode.h  PhyloTree.cpp  PhyloTree.h  Sequence.cpp  Sequence.h  SequencePool.cpp  SequencePool.h  Triplet.cpp  Triplet.h  TripletPool.cpp  TripletPool.h
RecombinantDetector/settings/: user_settings.json  user_settings.rec
RecombinantDetector/utils/: StatisticalUtils.cpp  StatisticalUtils.h  StringUtils.cpp  StringUtils.h  ThreadPool.h  Utils.cpp  Utils.h  numeric_types.h
performanceRun/: dengue_aligned_short_short.fasta  runner.py  user_settings.rec
